Hide range card footer icons on mobile (fixes #90)

--- a/css/custom.css
+++ b/css/custom.css
@@ -351,6 +351,12 @@ main .hero {
     width: 100%;
 }
 
+@media (max-width: 768px) {
+    .range-card-footer-item .card-footer-item-icon {
+        display: none;
+    }
+}
+
 
 
 /******************************************************************************
